# ScribeSync

./: .replit  README.md  pyproject.toml
attached_assets/: Pasted-Image-shape-3301-2550-3-Checkbox-position-125-125-35-35-ROI-shape-35-35-3-Gray-RO-1748116722289.txt  Pasted-Image-shape-3301-2550-3-Checkbox-position-55-55-35-35-ROI-shape-35-35-3-Gray-ROI--1748116445449.txt  Pasted-Image-shape-3301-2550-3-Checkbox-position-70-70-35-35-ROI-shape-35-35-3-Gray-ROI--1748116555136.txt
backend/: app.py  requirements.txt
backend/models/: db_models.py  user.py
scratchpad/: azure_doc_int.py  check_checkbox_ticked.py  db_tests.py  mistral.py  pdf_logo_creator.py  scribe_checkbox_scan.py
